# netabase_store

./: .gitignore  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.md  API_DESIGN_RECOMMENDATIONS.md  ARCHITECTURE.md  ARCHITECTURE_REFACTOR_SUMMARY.md  BACKEND_CHANGES.md  BENCHMARK_STATUS.md  BLOB_QUERY_METHODS.md  BOILERPLATE_FIXES.md  CHANGELOG_SESSION.md  CLEANUP_TODO.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_TESTING_SUMMARY.md  CONSTRUCTOR_ANALYSIS.md  Cargo.toml  DEPENDENCIES.md  DHT_IMPLEMENTATION.md  ENUM_DISCRIMINANT_REFACTOR_SUMMARY.md  GENERIC_QUEUE_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_AND_FEATURES.md  INTROSPECTION_API.md  LIBP2P_RECORDSTORE_IMPLEMENTATION.md  MACRO_GUIDE.md  MACRO_SYSTEM.md  MIGRATION_GUIDE.md  PERFORMANCE_ASSESSMENT.md  PHASE_8_FINAL_STATUS.md  PROFILING.md  QUICK_REFERENCE.md  README.md  README_ACCURACY_ISSUES.md  README_PROFILING.md  RECORDSTORE_CHANGES.md  RECORDSTORE_IMPLEMENTATION.md  REDB_IMPLEMENTATION_PLAN.md  (+38 more)
boilerplate/: Cargo.toml  README.md  benchmark_assessment.md  definition_2_roundtrip_schema.toml  definition_roundtrip_schema.toml  roundtrip_schema.toml  schema_import.toml  updated_benchmark_results.md  why_abstraction_is_faster.md
boilerplate/benches/: common.rs  crud.rs  minimal_overhead.rs  stress.rs
boilerplate/netabase_helper_macros/: Cargo.toml
boilerplate/netabase_helper_macros/src/: lib.rs
boilerplate/src/: lib.rs  main.rs
boilerplate/src/boilerplate_lib/: mod.rs  repository_example.rs
boilerplate/src/boilerplate_lib/models/: blob_types.rs  category.rs  heavy.rs  mod.rs  post.rs  user.rs
boilerplate/src/boilerplate_lib_macros/: mod.rs
boilerplate/src/boilerplate_lib_macros/models/: blob_types.rs
boilerplate/testing/: simple.redb  testing.netabase_schema.toml
boilerplate/tests/: macro_test.rs  schema_export.rs  schema_import.rs  schema_migration_export.rs  simple_test.rs
example/: Cargo.toml  boilerplate.rs  comprehensive_test.rs.bak  cross_definition_test.rs  functional_test.rs.bak
example/boilerplate_lib/: definition_two.rs  mod.rs
example/boilerplate_lib/models/: category.rs  mod.rs  post.rs  user.rs
netabase_deps/: Cargo.toml
netabase_deps/src/: lib.rs
netabase_macros/: Cargo.toml  README.md
netabase_macros/src/: lib.rs
netabase_macros/src/errors/: mod.rs
netabase_macros/src/generate/: mod.rs  tree_naming.rs
netabase_macros/src/generate/definition/: associated_types.rs  associated_types_ext.rs  backend_extensions.rs  complete.rs  definition_enum.rs  definition_trait.rs  keys_enum.rs  mod.rs  permissions.rs  tree_manager.rs
netabase_macros/src/generate/definition/permissions/: hierarchical_permissions.rs  hierarchical_permissions_test.rs  mod.rs
netabase_macros/src/generate/model/: complete.rs  cross_definition_links.rs  cross_definition_links_test.rs  mod.rs  model_trait.rs  primary_key.rs  relational_keys.rs  secondary_keys.rs  subscription_keys.rs
netabase_macros/src/generators/: link_insertion.rs  mod.rs  model_key.rs  model_relation.rs  module_definition.rs  record_store.rs  streams.rs  structure.rs  table_definitions.rs  tables_shim.rs  type_utils.rs  uniffi_type.rs  zerocopy.rs
netabase_macros/src/generators/definition/: enum_gen.rs  mod.rs  traits.rs
netabase_macros/src/generators/global/: enum_gen.rs  mod.rs
netabase_macros/src/generators/model/: key_enums.rs  migration.rs  mod.rs  serialization.rs  traits.rs  wrapper_types.rs
netabase_macros/src/generators/models/: impls.rs  key.rs  mod.rs
netabase_macros/src/generators/repository/: discriminant.rs  marker.rs  mod.rs  schema.rs  store.rs  trait_impl.rs
netabase_macros/src/generators/schema/: enum_impls.rs  mod.rs  model_enum.rs
netabase_macros/src/item_info/: mod.rs  netabase_definitions.rs  netabase_model.rs
netabase_macros/src/macros/: mod.rs  netabase.rs  netabase_blob_item.rs  netabase_definition.rs  netabase_model.rs  netabase_repository.rs
netabase_macros/src/parse/: attributes.rs  metadata.rs  mod.rs  model.rs  module.rs
netabase_macros/src/util/: mod.rs  visitor_utils.rs
netabase_macros/src/utils/: attributes.rs  attributes_old.rs  errors.rs  mod.rs  naming.rs  schema.rs
netabase_macros/src/visitors/: definition.rs  definitions_visitor.rs  global.rs  mod.rs  model_visitor.rs  netabase_schema_derive.rs  repository.rs  schema_module.rs  uniffi_visitor.rs
netabase_macros/src/visitors/model/: field.rs  key.rs  mod.rs  mutator.rs
netabase_macros/tests/: simple.rs  smoke_test.rs
netabase_store/: Cargo.toml  TODO.md
netabase_store/benches/: bench_comprehensive.rs  bench_comprehensive_all_features.rs  bench_concurrency.rs  bench_memory.rs  bench_throughput.rs  performance.rs
netabase_store/examples/: boilerplate.rs  permissions_example.rs  strict_boilerplate.rs  test_newtype_defaults.rs
netabase_store/src/: error.rs  lib.rs  prelude.rs
netabase_store/src/applications/: ecommerce_app.rs  mod.rs
netabase_store/src/codegen/: generator.rs  mod.rs  toml_parser.rs  toml_types.rs  validator.rs
netabase_store/src/databases/: mock_store.rs  mod.rs
netabase_store/src/databases/manager/: mod.rs  toml.rs  toml_types.rs
netabase_store/src/databases/redb_store/: manager.rs  mod.rs  traits.rs  transaction.rs
netabase_store/src/databases/redb_store/backend/: key.rs  table.rs  value.rs
netabase_store/src/databases/sled_store/: manager.rs  mod.rs  store_trait.rs  traits.rs  transaction.rs
netabase_store/src/traits/: mod.rs
netabase_store/src/traits/definition/: key.rs  mod.rs
netabase_store/src/traits/manager/: mod.rs  store_link.rs  transaction.rs
netabase_store/src/traits/model/: key.rs  mod.rs  relational.rs
netabase_store/src/traits/permission/: checker.rs  grants.rs  mod.rs
netabase_store/src/traits/store/: mod.rs  transaction.rs  tree_manager.rs
netabase_store/tests/: api_tests.rs  component_tests.rs  integration_tests.rs  permissions_integration_test.rs  sled_manager_basic_test.rs  sled_manager_integration_test.rs  test_bincode_conversions.rs  test_utils.rs  toml_generation_test.rs  unit_tests.rs
(+354 files in other folders)
