[package]
name = "netabase_store"
version = "0.1.0"
edition = "2024"

[dependencies]
redb = "3.1.0"
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
thiserror = "2.0.17"

[[bin]]
name = "assess"
path = "src/bin/assess.rs"

[[example]]
name = "boilerplate"
path = "./example/boilerplate.rs"

[[example]]
name = "simple_test"
path = "./example/simple_test.rs"
crate-type = ["bin"]
