[package]
name = "netabase_store"
version = "0.1.0"
edition = "2024"

[dependencies]
redb = "3.1.0"
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
thiserror = "2.0.17"
rand = "0.9.2"
derive_more = { version = "2.1.0", features = ["display"] }
criterion = { version = "0.8.1", features = ["html_reports"] }

[dev-dependencies]
netabase_store_examples = { path = "./example" }
criterion = "0.8.1"
derive_more = { version = "2.1.0", features = ["display"] }


[[example]]
name = "boilerplate"
path = "./example/boilerplate.rs"

[[bench]]
name = "crud"
path = "./benches/crud.rs"
harness = false
