[package]
name = "netabase_store"
version = "0.1.0"
edition = "2024"

[dependencies]
redb = "3.1.0"
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
thiserror = "2.0.17"
rand = "0.9.2"
derive_more = { version = "2.1.0", features = ["display"] }
toml = "0.9.10"
rustc-hash = "2.1"
sha2 = "0.10"

[workspace]
members = [
  "netabase_macros",
  "boilerplate"
]

[dev-dependencies]
netabase_store_examples = { path = "./boilerplate" }
netabase_macros = { path = "./netabase_macros" }
derive_more = { version = "2.1.0", features = ["display"] }

