[package]
name = "netabase_store_examples"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
netabase_store = { path = ".." }
netabase_macros = { path = "../netabase_macros", version = "0.1.3" }
redb = "3.1.0"
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
derive_more = { version = "2.1.0", features = ["display", "try_into", "from", "into"] }
from = "0.1.4"
clap = { version = "4.5.23", features = ["derive"] }
netabase_helper_macros = { version = "0.1.0", path = "netabase_helper_macros" }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
rand = "0.9.2"

[[bench]]
name = "crud"
path = "benches/crud.rs"
harness = false

[[bench]]
name = "stress"
path = "benches/stress.rs"
harness = false
# Test ordering: schema_export must run before schema_import
# Tests run in alphabetical order
[[test]]
name = "0_schema_export"
path = "tests/schema_export.rs"

[[test]]
name = "1_schema_import"
path = "tests/schema_import.rs"

[[test]]
name = "macro_test"
path = "tests/macro_test.rs"