[package]
name = "netabase_store_examples"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "netabase_store_examples"
path = "boilerplate_lib/mod.rs"

[dependencies]
netabase_store = { path = ".." }
redb = "3.1.0"
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
derive_more = { version = "2.1.0", features = ["display", "try_into", "from"] }
from = "0.1.4"
