[package]
name = "netabase_deps"
version = "0.0.2"
edition = "2024"
description = "Re-exports of dependencies for netabase macro hygiene"
license = "GPL-3.0-only"
repository = "https://github.com/newsnet-africa/netabase_store.git"
keywords = ["key-value", "storage", "wrapper", "libp2p", "wasm"]
categories = ["database"]

[dependencies]
bincode = { version = "2.0", features = ["derive", "serde"] }
derive_more = { version = "2.0.1", features = ["from", "try_into", "into"] }
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
paxakos = "0.13.0"
blake3 = "1.5"
