[package]
name = "netabase_macros"
version = "0.1.3"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.111", features = ["visit", "visit-mut", "full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
