[package]
name = "netabase_store"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.0", features = ["try_into", "from"] }
ouroboros = "0.18.5"
redb = "3.1.0"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
thiserror = "2.0.17"
blake3 = "1.3"
bincode = "2.0"
hex = "0.4"
libp2p = { version = "0.56.0", features = ["kad"] }
sled = "0.34.7"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rand = "0.8"
env_logger = "0.11.8"
tempfile = "3.0"

[[bench]]
name = "bench_throughput"
path = "benches/bench_throughput.rs"
harness = false # We're doing manual timing, not using criterion or similar.
